Fix for Bug#18246 "compilation error with tcp_wrapper"